infra-manifest/istio/ingress-gateway/ingress-vsvc.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: my-virtualservice
  namespace: istio-system
spec:
  gateways:
    - my-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: service-aggregator-clusterip-service.default.svc.cluster.local
            port:
              number: 80
